Add EncryptionKeyResolver, CloudflareTcpProxyManager, SSHTunnelManager, and related updates
- Introduced `EncryptionKeyResolver` for resolving external AES encryption keys from environment variables, files, and IntelliJ run configurations.
- Added `CloudflareTcpProxyManager` to manage the Cloudflare TCP proxy for secure MySQL connections.
- Implemented `SSHTunnelManager` for automated SSH tunneling to access MySQL when direct TCP is unavailable.
- Enhanced `PasswordGenerator` with refactored word-based password generation, removed API reliance, and introduced utility methods.
- Updated `Main.java` to integrate database connection defaults and prompt for credentials when launching the password manager.
- Extended `pom.xml` with new dependencies for MySQL and JSch support.